<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lessen</string>
    <string name="auction">Auction</string>
    <string name="log_in">Log in.</string>
    <string name="action_settings">Settings</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#fff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="sign_in">Sign in</string>
    <string name="no_account">I don\'t have an account yet.</string>
    <string name="create_account">create one</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_message">Please sign up below</string>
    <string name="continue_button">Continue</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="already_acount">Already have account? </string>
    <string name="click_here">click here</string>
    <string name="auction_item_title">Auction Item Title</string>
    <string name="add_item">Add item</string>
    <string name="place_bid">Place Bid</string>
    <string name="add_auction_item">Add Auction Item</string>
    <string name="modify_auction_item">Modify auction item</string>
    <string name="sign_in_actionbar">Sign in</string>
    <string name="sign_up_actionbar">Sign Up</string>
    <string name="forgot_pass_actionbar">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Logout</string>
    <string name="account">Account</string>
    <string name="auctioned_history_title">History</string>
    <string name="refresh">Refresh</string>
    <string name="retrieve">Retrieve</string>
    <string name="lost_password">Enter email and username</string>
    <string name="new_password">Enter new password</string>
</resources>
