<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialblack">


    <ScrollView
        android:layout_width="fill_parent"
        android:fillViewport="true"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/radialblack"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <LinearLayout
                android:id="@+id/log_in_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_top_bg"
                    android:padding="10dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#bbbbbb"
                    android:drawableLeft="@drawable/email" />


                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_default_bg"
                    android:layout_marginTop="-2dp"
                    android:padding="10dp"
                    android:hint="User Name"
                    android:textColorHint="#bbbbbb"
                    android:drawableLeft="@drawable/user" />

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bottom_bg"
                    android:layout_marginTop="-2dp"
                    android:padding="10dp"
                    android:hint="Password"
                    android:textColorHint="#bbbbbb"
                    android:password="true"
                    android:drawableLeft="@drawable/password" />

                <Button
                    android:id="@+id/btnSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/continue_button"
                    style="@style/DefaultButtonText"
                    android:background="@drawable/button_default_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/log_in_layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_height="wrap_content"
                    android:textColor="@color/logo_text"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/logo_text"
                    android:textStyle="normal"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/white_text"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/already_acount" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:textColor="@color/blue_text"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:clickable="true"
                    android:text="@string/click_here" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
